--- a/issues/templates/issues/issue_confirm_delete.html
+++ b/issues/templates/issues/issue_confirm_delete.html
@@ -24,7 +24,7 @@
                             <ul class="list-unstyled mb-0">
                                 <li><strong>Category:</strong> {{ issue.get_category_display }}</li>
                                 <li><strong>Status:</strong> {{ issue.get_status_display }}</li>
-                                <li><strong>Priority:</strong> {{ issue.get_priority_display }}</li>
+                                <li><strong>Reporter:</strong> {{ issue.reporter }}</li>
                                 <li><strong>Assigned To:</strong> {{ issue.assignee|default:"Unassigned" }}</li>
                                 <li><strong>Created:</strong> {{ issue.created_at|date:"F j, Y" }}</li>
                             </ul>
@@ -34,9 +34,11 @@
                     <form method="POST">
                         {% csrf_token %}
                         <div class="d-flex justify-content-between">
-                            <a href="{% url 'issue_detail' issue.pk %}" class="btn btn-outline-secondary">Cancel</a>
+                            <a href="{% url 'issue_detail' issue.pk %}" class="btn btn-secondary">
+                                <i class="fas fa-times me-2"></i>Cancel
+                            </a>
                             <button type="submit" class="btn btn-danger">
-                                <i class="fas fa-trash-alt me-2"></i>Delete Issue
+                                <i class="fas fa-trash me-2"></i>Delete Issue
                             </button>
                         </div>
                     </form>
