--- a/issues/templates/issues/issue_form.html
+++ b/issues/templates/issues/issue_form.html
@@ -1,5 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %}{% if issue %}Edit Issue{% else %}Report New Issue{% endif %} - Chalkstone Council{% endblock %}
 
@@ -12,55 +13,24 @@
                     <h4 class="mb-0">{% if issue %}Edit Issue{% else %}Report New Issue{% endif %}</h4>
                 </div>
                 <div class="card-body">
-                    <form method="POST" enctype="multipart/form-data">
+                    <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         
-                        <div class="mb-3">
-                            <label for="id_title" class="form-label">Title</label>
-                            {{ form.title }}
-                            {% if form.title.errors %}
-                                <div class="alert alert-danger">{{ form.title.errors }}</div>
-                            {% endif %}
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="id_description" class="form-label">Description</label>
-                            {{ form.description }}
-                            {% if form.description.errors %}
-                                <div class="alert alert-danger">{{ form.description.errors }}</div>
-                            {% endif %}
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="id_category" class="form-label">Category</label>
-                            {{ form.category }}
-                            {% if form.category.errors %}
-                                <div class="alert alert-danger">{{ form.category.errors }}</div>
-                            {% endif %}
-                        </div>
-
-                        {% if user.is_staff %}
-                            <div class="mb-3">
-                                <label for="id_assignee" class="form-label">Assignee</label>
-                                {{ form.assignee }}
-                                {% if form.assignee.errors %}
-                                    <div class="alert alert-danger">{{ form.assignee.errors }}</div>
-                                {% endif %}
-                            </div>
-
-                            <div class="mb-3">
-                                <label for="id_status" class="form-label">Status</label>
-                                {{ form.status }}
-                                {% if form.status.errors %}
-                                    <div class="alert alert-danger">{{ form.status.errors }}</div>
-                                {% endif %}
+                        {% if form.errors %}
+                            <div class="alert alert-danger">
+                                <h5 class="alert-heading">Please correct the errors below:</h5>
+                                {{ form.errors }}
                             </div>
                         {% endif %}
 
+                        {{ form|crispy }}
+
                         <div class="d-flex justify-content-between">
-                            <a href="{% url 'issue_list' %}" class="btn btn-outline-secondary">Cancel</a>
+                            <a href="{% url 'issue_list' %}" class="btn btn-secondary">
+                                <i class="fas fa-times me-2"></i>Cancel
+                            </a>
                             <button type="submit" class="btn btn-primary">
-                                {% if issue %}Update Issue{% else %}Submit Issue{% endif %}
+                                <i class="fas fa-save me-2"></i>Save Changes
                             </button>
                         </div>
                     </form>
