--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load humanize %}
 {% load crispy_forms_tags %}
+{% load notification_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -53,13 +54,6 @@
                             <i class="fas fa-list me-1"></i>Issues
                         </a>
                     </li>
-                    {% if user.is_staff %}
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.url_name == 'analytics' %}active{% endif %}" href="{% url 'analytics' %}">
-                            <i class="fas fa-chart-bar me-1"></i>Analytics
-                        </a>
-                    </li>
-                    {% endif %}
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
@@ -76,6 +70,23 @@
                                     <i class="fas fa-ticket-alt me-2"></i>My Issues
                                 </a>
                             </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'notifications' %}">
+                                    <i class="fas fa-bell me-2"></i>Notifications
+                                    {% with unread=user|unread_count %}
+                                        {% if unread %}
+                                            <span class="badge bg-danger rounded-pill">{{ unread }}</span>
+                                        {% endif %}
+                                    {% endwith %}
+                                </a>
+                            </li>
+                            {% if user.is_superuser %}
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'manage_staff' %}">
+                                        <i class="fas fa-users-cog me-2"></i>Manage Staff Members
+                                    </a>
+                                </li>
+                            {% endif %}
                             <li><hr class="dropdown-divider"></li>
                             <li>
                                 <a class="dropdown-item" href="{% url 'logout' %}">
