--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -31,7 +31,7 @@
                             <input type="email" name="email" value="{{ form.email.value|default:'' }}" class="form-control" id="id_email">
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">
+                            <button type="submit" name="update_profile" class="btn btn-primary">
                                 <i class="fas fa-save me-2"></i>Save Changes
                             </button>
                         </div>
