--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.url_name == 'issue_list' %}active{% endif %}" href="{% url 'issue_list' %}">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'issue_list' %}active{% endif %}" href="{% url 'issues:issue_list' %}">
                             <i class="fas fa-list me-1"></i>Issues
                         </a>
                     </li>
@@ -71,7 +71,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'notifications' %}">
+                                <a class="dropdown-item" href="{% url 'issues:notifications' %}">
                                     <i class="fas fa-bell me-2"></i>Notifications
                                     {% with unread=user|unread_count %}
                                         {% if unread %}
@@ -150,7 +150,7 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="{% url 'index' %}">Home</a></li>
-                        <li><a href="{% url 'issue_list' %}">Report Issues</a></li>
+                        <li><a href="{% url 'issues:issue_list' %}">Report Issues</a></li>
                         <li><a href="{% url 'contact' %}">Contact Us</a></li>
                     </ul>
                 </div>
