--- a/issues/templates/issues/issue_edit.html
+++ b/issues/templates/issues/issue_edit.html
@@ -1,4 +1,5 @@
-{% extends 'core/base.html' %}
+{% extends "core/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block title %}Edit Issue - Chalkstone Council{% endblock %}
@@ -12,11 +13,11 @@
                     <h4 class="mb-0">Edit Issue</h4>
                 </div>
                 <div class="card-body">
-                    <form method="post" enctype="multipart/form-data">
+                    <form method="post">
                         {% csrf_token %}
                         {{ form|crispy }}
                         <div class="d-flex justify-content-between">
-                            <a href="{% url 'issue_detail' issue.id %}" class="btn btn-secondary">
+                            <a href="{% url 'issues:issue_detail' issue.id %}" class="btn btn-secondary">
                                 <i class="fas fa-times me-2"></i>Cancel
                             </a>
                             <button type="submit" class="btn btn-primary">
