--- a/issues/templates/issues/issue_form.html
+++ b/issues/templates/issues/issue_form.html
@@ -26,7 +26,7 @@
                         {{ form|crispy }}
 
                         <div class="d-flex justify-content-between">
-                            <a href="{% url 'issue_list' %}" class="btn btn-secondary">
+                            <a href="{% url 'issues:issue_list' %}" class="btn btn-secondary">
                                 <i class="fas fa-times me-2"></i>Cancel
                             </a>
                             <button type="submit" class="btn btn-primary">
